# Deadline_Prempt_Controller

./: .gitignore  CMakeLists.txt  ControllingREST.json  LICENSE  README.md  main.cpp
Constants/: AllocationMacros.h  CLIENT_DETAILS.h  CommTypes.h  CompNetCon.h  ControllerRequestPaths.h  DNNPadding.h  DNN_Type.h  EMA.h  FTP_CONFIG.h  LOG_CONSTANT.h  LayerType.h  ModeMacros.h  NETWORK_DISC_PARAMS.h  RequestPaths.h  RequestSizes.h  RequestTypes.h
Services/AllocationAlgorithmServices/: AllocationAlgorithmServices.cpp  AllocationAlgorithmServices.h
Services/DeviceRegister/: RegisterDevices.cpp  RegisterDevices.h
Services/HighCompServices/: HighCompServices.cpp  HighCompServices.h
Services/LOG_MANAGER/: LogManager.cpp  LogManager.h
Services/LowCompServices/: LowCompServices.cpp  LowCompServices.h
Services/NetworkLinkDiscFunctions/: NetworkDiscFunctions.cpp  NetworkDiscFunctions.h
Services/NetworkQueueManager/: NetworkQueueManager.cpp  NetworkQueueManager.h
Services/NetworkServices/: NetworkServices.cpp  NetworkServices.h
Services/ProcessOffloadRequest/: ProcessOffloadRequest.cpp  ProcessOffloadRequest.h
Services/ProcessingDataStructureConversion/: ProcessingDataStructureConversion.cpp  ProcessingDataStructureConversion.h
Services/WorkQueueManager/: WorkQueueManager.cpp  WorkQueueManager.h
controller/: MasterController.cpp  MasterController.h
controller/BasicController/: BasicController.cpp  BasicController.h
model/data_models/BaseDNNModel/: BaseDNNModel.cpp  BaseDNNModel.h
model/data_models/BaseResult/: BaseResult.cpp  BaseResult.h
model/data_models/Bucket/: Bucket.cpp  Bucket.h
model/data_models/CommunicationModels/BaseCommunicationModel/: BaseCommModel.cpp  BaseCommModel.h
model/data_models/CompResult/BaseCompResult/: BaseCompResult.cpp  BaseCompResult.h
model/data_models/CompResult/HighCompResult/: HighCompResult.cpp  HighCompResult.h
model/data_models/CompResult/LowCompResult/: LowCompResult.cpp  LowCompResult.h
model/data_models/ComputationDevice/: ComputationDevice.cpp  ComputationDevice.h
model/data_models/FTP_Lookup/: FTP_Lookup.cpp  FTP_Lookup.h
model/data_models/LinkAct/: LinkAct.cpp  LinkAct.h
model/data_models/Network/: Network.cpp  Network.h
model/data_models/NetworkCommsModels/BandwidthTestCommsModel/: BandwidthTestCommsModel.cpp  BandwidthTestCommsModel.h
model/data_models/NetworkCommsModels/BaseNetworkCommsModel/: BaseNetworkCommsModel.cpp  BaseNetworkCommsModel.h
model/data_models/NetworkCommsModels/HaltNetworkCommsModel/: HaltNetworkCommsModel.cpp  HaltNetworkCommsModel.h
model/data_models/NetworkCommsModels/HighComplexityAllocation/: HighComplexityAllocationComms.cpp  HighComplexityAllocationComms.h
model/data_models/NetworkCommsModels/LowComplexityAllocation/: LowComplexityAllocationComms.cpp  LowComplexityAllocationComms.h
model/data_models/NetworkCommsModels/OutboundPrune/: OutboundPrune.cpp  OutboundPrune.h
model/data_models/NetworkCommsModels/OutboundUpdate/: OutboundUpdate.cpp  OutboundUpdate.h
model/data_models/NetworkCommsModels/WorkRequestResponse/: WorkRequestResponse.cpp  WorkRequestResponse.h
model/data_models/PartitionConfig/: PartitionConfig.cpp  PartitionConfig.h
model/data_models/ResourceAvailabilityList/: ResourceAvailabilityList.cpp  ResourceAvailabilityList.h
model/data_models/ResourceTransformation/: ResourceTransformation.cpp  ResourceTransformation.h
model/data_models/ResourceWindow/: ResourceWindow.cpp  ResourceWindow.h
model/data_models/ResultBlock/: ResultBlock.cpp  ResultBlock.h
model/data_models/Task/: Task.cpp  Task.h
model/data_models/TaskQueue/: TaskQueue.cpp  TaskQueue.h
model/data_models/TileRegion/: TileRegion.cpp  TileRegion.h
model/data_models/TimeWindow/: TimeWindow.cpp  TimeWindow.h
model/data_models/WorkItems/BandwidthUpdate/: BandwidthUpdateItem.cpp  BandwidthUpdateItem.h
model/data_models/WorkItems/BaseWorkItem/: WorkItem.cpp  WorkItem.h
model/data_models/WorkItems/DAGDisruptItem/: DAGDisruption.cpp  DAGDisruption.h
model/data_models/WorkItems/HaltWorkItem/: HaltWorkItem.cpp  HaltWorkItem.h
model/data_models/WorkItems/ProcessingItem/: ProcessingItem.cpp  ProcessingItem.h
model/data_models/WorkItems/ProcessingItem/HighProcessingItem/: HighProcessingItem.cpp  HighProcessingItem.h
model/data_models/WorkItems/ProcessingItem/LowProcessingItem/: LowProcessingItem.cpp  LowProcessingItem.h
model/data_models/WorkItems/PruneItem/: PruneItem.cpp  PruneItem.h
model/data_models/WorkItems/StateUpdate/: StateUpdate.cpp  StateUpdate.h
model/data_models/WorkItems/WorkRequest/: WorkRequest.cpp  WorkRequest.h
model/enums/: CommsEnums.h  DNN_Type_Enum.h  LayerTypeEnum.h  LogTypes.h  NetworkCommsTypes.h  RequestTypeEnum.h
utils/: InterruptUtils.h  RuntimeUtils.h  boost_imports.h
utils/IPerfTest/: IPerfTest.cpp  IPerfTest.h
utils/LockList/: LockList.cpp  LockList.h
utils/MultipartParser/: MultipartParser.cpp  MultipartParser.h
utils/NetworkUtils/: NetUtils.cpp  NetUtils.h
utils/UtilFunctions/: UtilFunctions.cpp  UtilFunctions.h
